name:             multiset-large
version:          0.1.0
author:           Masahiro Sakai
maintainer:       masahiro.sakai@gmail.com
bug-reports:      https://github.com/msakai/multiset-large/issues
category:         Data Structures
synopsis:         The Data.MultiSet.Large container type
description:
    A variation of Data.Set.
    Multisets, sometimes also called bags, can contain multiple copies of the same key.
    This package is a modified version of multiset package <http://hackage.haskell.org/package/multiset>,
    and the containers of this package can handle arbitrary (i.e. not limited to Int) number of elements.
license:          BSD3
license-file:     LICENSE
build-type:       Simple
Cabal-version:    >= 1.10
extra-source-files: include/Typeable.h

source-repository head
    type:     git
    location: http://github.com/msakai/multiset-large.git

Library
  exposed-modules:    Data.MultiSet.Large, Data.IntMultiSet.Large

  include-dirs:       include
  default-language:   Haskell2010
  other-extensions:   CPP
  ghc-options:        -Wall
  build-depends:      containers >= 0.5, base >= 4 && < 5
